--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.5'
 services:
   mysql:
     container_name: mysql
-    image: mysql
+    image: mysql:8.0
     restart: unless-stopped
     environment:
       MYSQL_DATABASE: mydb
