--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,7 +5,7 @@ on:
     branches: 
       - master
   pull_request:
-    branches: ['feature/**', 'bugfix/**', 'hotfix/**']
+    branches: ["master",'feature/**', 'bugfix/**', 'hotfix/**']
 
 jobs:
   Run-build-test-ubuntu:
