--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --watch --config ./test/jest-e2e.json",
-    "start:db": " docker-compose -p mysql up -d"
+    "start:db": " docker-compose -p mysql up -d",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -55,6 +56,7 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.3",
     "jest": "29.3.1",
     "pactum": "^3.3.2",
     "prettier": "^2.3.2",
