--- a/package.json
+++ b/package.json
@@ -71,6 +71,12 @@
     "tsconfig-paths": "4.1.1",
     "typescript": "^4.7.4"
   },
+  "lint-staged": {
+    "src/**/*.{ts,css,html}": [
+      "yarn lint",
+      "pretty-quick --staged"
+    ]
+  },
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged"
