--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.0",
     "jest": "29.3.1",
+    "lint-staged": "^13.2.0",
     "pactum": "^3.3.2",
     "prettier": "^2.8.4",
     "pretty-quick": "^3.1.3",
