--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --watch --config ./test/jest-e2e.json",
-    "start:db": " docker-compose -p mysql up -d",
-    "postinstall": "husky install"
+    "start:db": " docker-compose -p mysql up -d"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
