--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,14 +29,14 @@ jobs:
           - 3306:3306
     name: Build and Test on ubuntu
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: "mysql://${{env.MYSQL_USER}}:${{env.MYSQL_ROOT_PASSWORD}}@${{env.MYSQL_HOST}}:${{env.MYSQL_PORT}}/${{env.MYSQL_DATABASE}}?connection_limit=2"
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: "18.x"
-        env:
-          DATABASE_URL: "mysql://$MYSQL_USER:$MYSQL_ROOT_PASSWORD@$MYSQL_HOST:$MYSQL_PORT/$MYSQL_DATABASE?connection_limit=2"
-      - run: echo "$DATABASE_URL ubuntu"
+      - run: echo "$DATABASE_URL"
       - run: yarn install
       - run: yarn prisma generate
       - run: yarn lint
@@ -59,29 +59,29 @@ jobs:
   #     - run: yarn lint
   #     - run: yarn test
   #     - run: yarn run build
-  Run-build-test-macos:
-    services:
-      mysql:
-        image: mysql
-        env:
-          MYSQL_DATABASE: $MYSQL_DATABASE
-          MYSQL_USER: $MYSQL_USER
-          MYSQL_PASSWORD: $MYSQL_PASSWORD
-          MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
-        ports:
-          - 3306:3306
-    name: Build and Test on macos
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "18.x"
-        env:
-          DATABASE_URL: "mysql://$MYSQL_USER:$MYSQL_ROOT_PASSWORD@$MYSQL_HOST:$MYSQL_PORT/$MYSQL_DATABASE?connection_limit=2"
-      - run: echo "$DATABASE_URL macos"
-      - run: yarn install
-      - run: yarn prisma generate
-      - run: yarn lint
-      - run: yarn test
-      - run: yarn run build
+  # Run-build-test-macos:
+  #   services:
+  #     mysql:
+  #       image: mysql
+  #       env:
+  #         MYSQL_DATABASE: $MYSQL_DATABASE
+  #         MYSQL_USER: $MYSQL_USER
+  #         MYSQL_PASSWORD: $MYSQL_PASSWORD
+  #         MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
+  #       ports:
+  #         - 3306:3306
+  #   name: Build and Test on macos
+  #   runs-on: macos-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: "18.x"
+  #       env:
+  #         DATABASE_URL: "mysql://$MYSQL_USER:$MYSQL_ROOT_PASSWORD@$MYSQL_HOST:$MYSQL_PORT/$MYSQL_DATABASE?connection_limit=2"
+  #     - run: echo "$DATABASE_URL macos"
+  #     - run: yarn install
+  #     - run: yarn prisma generate
+  #     - run: yarn lint
+  #     - run: yarn test
+  #     - run: yarn run build
