--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "18.x"
-      - run: echo "$DATABASE_URL"
+      - run: node ./scripts/db.js
       - run: yarn install
       - run: yarn prisma generate
       - run: yarn lint
