--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,15 +23,22 @@ jobs:
     env:
       DATABASE_URL: ${{secrets.DATABASE_URL}}
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Setup node
+        uses: actions/setup-node@v3
         with:
           node-version: "18.x"
-      - run: yarn install
-      - run: yarn prisma generate
-      - run: yarn lint
-      - run: yarn test
-      - run: yarn run build
+      - name: Install dependencies
+        run: yarn install
+      - name: Generate Prisma client
+        run: yarn prisma generate
+      - name: Lint code
+        run: yarn lint
+      - name: Run Test
+        run: yarn test
+      - name: Build project
+        run: yarn run build
 
   # Run-build-test-windows:
   #   name: Build and Test on windows
